--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#F8EEE2</color>
+    <color name="secondary">#D9614C</color>
+    <color name="primaryText">#595550</color>
 </resources>
