--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,66 +8,63 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="359dp"
-        android:layout_height="319dp"
-        android:contentDescription="@string/notely"
-        android:src="@drawable/main"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.223" />
-
-    <TextView
-        android:id="@+id/textView"
+        android:id="@+id/imagePic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/nunito"
-        android:text="@string/main"
-        android:textSize="35sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.053" />
+        android:contentDescription="@string/notely"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
+        android:src="@drawable/main" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
+        android:id="@+id/createText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10sp"
-        android:layout_marginEnd="10sp"
-        android:fontFamily="@font/nunito_regular"
-        android:gravity="center"
-        android:padding="15sp"
+        android:layout_centerHorizontal="true"
+        android:text="@string/main"
+        android:layout_below="@id/imagePic"
+        android:layout_marginTop="25dp"
+        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/nunito"
+        />
+
+    <TextView
+        android:id="@+id/addNoteText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/home_text"
+        android:textSize="17sp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:textColor="@color/primaryText"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.073" />
+        android:layout_below="@id/createText"
+        android:fontFamily="@font/nunito_light"
+        android:layout_marginTop="15dp"
+        />
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:backgroundTint="@color/secondary"
-        android:fontFamily="@font/nunito"
-        android:gravity="center"
-        android:layout_marginEnd="40sp"
-        android:layout_marginStart="40sp"
-        android:padding="20sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:padding="15dp"
         android:text="@string/Create"
-        android:textSize="30sp"
-        app:cornerRadius="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="10dp" />
+        android:textSize="20sp"
+        android:textColor="@color/white"
+
+        android:fontFamily="@font/nunito"
+        android:layout_marginTop="15dp"
+        app:cornerRadius="10dp"
+        android:backgroundTint="@color/secondary"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/addNoteText"
+        />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+</RelativeLayout>
