--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
         android:layout_marginEnd="20dp"
         android:padding="15dp"
         android:text="@string/Create"
-        android:textSize="20sp"
+        android:textSize="19dp"
         android:textColor="@color/white"
 
         android:fontFamily="@font/nunito"
