--- a/app/src/main/res/layout/activity_note_list.xml
+++ b/app/src/main/res/layout/activity_note_list.xml
@@ -16,7 +16,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:textSize="29sp"
-        android:fontFamily="@font/nunito_light"
+        android:fontFamily="@font/nunito_regular"
         />
 
     <androidx.recyclerview.widget.RecyclerView
