make some changes to the drawables

--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -11,10 +11,10 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primary"
+        android:background="#E9F8EEE2"
         android:fontFamily="@font/nunito"
         android:hint="@string/Title"
-        android:textColor="@color/black"
+        android:textColor="#F7000000"
         android:autofillHints="name"
         android:inputType="text"
         android:padding="15dp"
