--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -14,7 +14,7 @@
         android:background="#E9F8EEE2"
         android:fontFamily="@font/nunito"
         android:hint="@string/Title"
-        android:textColor="#F7000000"
+        android:textColor="#000000"
         android:autofillHints="name"
         android:inputType="text"
         android:padding="15dp"
@@ -46,8 +46,8 @@
         android:layout_margin="16dp"
         app:srcCompat="@drawable/baseline_save_24"
         android:contentDescription="@string/Create"
-        app:backgroundTint="@color/secondary"
-        app:rippleColor="@color/primary" />
+        app:backgroundTint="#F8D9614C"
+        app:rippleColor="#F5F8EEE2" />
 
 
 
