--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
         android:padding="15dp"
         android:text="@string/Create"
         android:textSize="19dp"
-        android:textColor="@color/white"
+        android:textColor="#F7FFFFFF"
 
         android:fontFamily="@font/nunito"
         android:layout_marginTop="15dp"
